methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:1: error: ')' expected but ';' found.
def FLowers(c:Color;d:Color){
                   ^FlowerPot:1: error: ';' expected but ')' found.
def FLowers(c:Color;d:Color){
                           ^FlowerPot:31: error: ';' expected but ')' found.
 FLowers(Color.red;Color.YELLOW)
                               ^FlowerPot:33: error: ';' expected but ')' found.
 FLowers(Color.CYAN;Color.YELLOW)
                                ^FlowerPot:38: error: ';' expected but ')' found.
 FLowers(Color.ORANGE;Color.YELLOW)
                                  ^FlowerPot:42: error: ';' expected but ')' found.
 FLowers(Color.GREEN;Color.YELLOW)
                                 ^FlowerPot:44: error: ';' expected but ')' found.
FLowers(Color.PINK;Color.YELLOW)
                               ^FlowerPot:52: error: Unmatched closing brace '}' ignored here
}
^